fix layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -125,12 +125,12 @@ section h2 {
   text-transform: uppercase;
 }
 
-section p {
+section .desc {
   margin-bottom: 1.9375rem;
 }
 
 @media screen and (min-width: 1200px) {
-  section p {
+  section .desc {
     margin-bottom: 5.5625rem;
   }
 }
